# discord-stepn-alerts

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt  rules.json  stepn.py  stepn_discord.py
src/: lib.rs
